#5176 position: absolute was necessary to solve this issue in order to make overflow work in both directions, so top/left/bottom/right should be used instead of align/valign/etc, and the rest of the CSS is a known hack
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@40740 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -2166,6 +2166,20 @@ body.application[dir=rtl] .gwt-Label.textIconButton {
 	color: #F8F8F8 !important;
 }
 
+.geogebraweb-table-spreadsheet td.SVCenterTD {
+	position: relative;
+	overflow: hidden;
+}
+
+.geogebraweb-table-spreadsheet td.SVCenterTD canvas {
+	position: absolute;
+	margin: auto;
+	top: -8192px;
+	left: -8192px;
+	bottom: -8192px;
+	right: -8192px;
+}
+
 .geogebraweb-table-spreadsheet td.SVheader {
 	padding-left: 0px;
 	padding-right: 0px;
